@@ -1,3 +1,13 @@
+2006-12-11  David Hyatt  <hyatt@apple.com>
+
+        Fix the failing layout test.  Just remove Unicode::isSpace and
+        revert StringImpl to do the same thing it was doing before.
+
+        Reviewed by darin
+
+        * wtf/unicode/icu/UnicodeIcu.h:
+        * wtf/unicode/qt4/UnicodeQt4.h:
+
 2006-12-09  George Staikos  <staikos@kde.org>
 
         Reviewed by Zack.
